# KickExchange

./: .gitIgnore  README.md
docs/: ARCHITECTURE.md  README.md
frontend/: Dockerfile  README.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: graphql.ts
infra/: README.md
infra/docker/: docker-compose.yml
services/: README.md
services/matching-engine/: CMakeLists.txt  Dockerfile  README.md
services/matching-engine/scripts/: smoke_test.py
services/matching-engine/src/: main.cpp
services/matching-engine/src/engine/: asset_book_manager.cpp  asset_book_manager.hpp  session.cpp  session.hpp
services/matching-engine/src/limit_order_book/: Book.cpp  Book.hpp  Order.cpp  Throttle.cpp  Throttle.hpp
services/matching-engine/src/net/: tcp_server.cpp  tcp_server.hpp
services/matching-engine/src/protocol/: codec.cpp  codec.hpp  message_types.hpp
services/matching-engine/test/: CMakeLists.txt  LimitOrderBookTests.cpp
services/trading-service/: Dockerfile  README.md  go.mod  go.sum  gqlgen.yml
services/trading-service/cmd/server/: main.go
services/trading-service/internal/assets/: repository.go
services/trading-service/internal/config/: config.go
services/trading-service/internal/db/: db.go  migrate.go
services/trading-service/internal/engineclient/: client.go  connection.go  heartbeat.go  pending.go  protocol.go  reader.go  state.go  writer.go
services/trading-service/internal/graphql/: resolver.go  schema.graphqls  schema.resolvers.go  server.go
services/trading-service/internal/pricefeed/: feed.go
(+6 files in other folders)
